@@ -35,6 +35,7 @@ import java.io.RandomAccessFile;
 import java.net.URI;
 import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
+import java.util.Arrays;
 
 public class RawFile {
   public static class RawFileScanner extends FileScanner implements SeekableScanner {
@@ -153,7 +154,11 @@ public class RawFile {
             break;
 
           case CHAR :
-            tuple.put(i, DatumFactory.createChar(buffer.getChar()));
+            int realLen = buffer.getInt();
+            byte[] buf = new byte[columnTypes[i].getLength()];
+            buffer.get(buf);
+            byte[] charBuf = Arrays.copyOf(buf, realLen);
+            tuple.put(i, DatumFactory.createChar(charBuf));
             break;
 
           case INT2 :
@@ -363,7 +368,10 @@ public class RawFile {
             break;
 
           case CHAR :
-            buffer.putChar(t.get(i).asChar());
+            byte[] src = t.getChar(i).asByteArray();
+            byte[] dst = Arrays.copyOf(src, columnTypes[i].getLength());
+            buffer.putInt(src.length);
+            buffer.put(dst);
             break;
 
           case INT2 :
